Optimize hibernate with projection and persist